--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-/.gradle
-/.idea
-/.svn
-/.build
-JAY.iml
-NewApp.iml
+.gradle
+/local.properties
+.DS_Store # only needed under mac os
+/build
+/captures
+*.iml
+.idea
+*.apk #optional
