--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,12 +33,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".login.LoginActivity" />
+        <activity android:name=".login.RegistActivity">
+
+        </activity>
+        <activity android:name=".login.LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".login.FindPsdActivity" />
         <activity android:name=".Home.HomeActivity"></activity>
-        <activity android:name=".login.RegistActivity"></activity>
+
         <activity android:name=".UserSet.activity.ReportBirthday" />
-        <activity android:name=".UserSet.activity.ReportMinZu" />
         <activity android:name=".UserSet.activity.ReportHeight" />
         <activity android:name=".UserSet.activity.ReportNoeat" />
         <activity android:name=".UserSet.activity.ReportOther"></activity>
@@ -48,8 +56,11 @@
         <activity android:name=".UserSet.activity.ReportSpecial" />
         <activity android:name=".UserSet.activity.ReportSex" />
         <activity android:name=".UserSet.activity.UserInfoActivity" />
-        <activity android:name=".UserSet.activity.UserCenterView" />
+
         <activity android:name=".UserSet.activity.SettingActivity">
+
+        </activity>
+        <activity android:name=".UserSet.activity.ServiceCenter">
 
         </activity>
         <activity android:name=".UserSet.activity.ReportAllergy" />
@@ -65,13 +76,6 @@
             android:enabled="true"
             android:process=":remote" />
 
-        <activity android:name=".UserSet.activity.ServiceCenter">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
     </application>
 
 </manifest>
