--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,15 +34,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".login.LoginActivity" />
-        <activity android:name=".login.FindPsdActivity" />
+        <activity android:name=".login.ModifyPSDActivity" />
         <activity android:name=".Home.HomeActivity">
+        </activity>
+        <activity android:name=".login.RegistActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".login.RegistActivity" />
         <activity android:name=".UserSet.activity.ReportBirthday" />
         <activity android:name=".UserSet.activity.ReportHeight" />
         <activity android:name=".UserSet.activity.ReportAllergy">
