--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,16 +33,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".login.LoginActivity" />
+        <activity android:name=".login.LoginActivity">
+
+        </activity>
         <activity android:name=".login.ModifyPSDActivity" />
         <activity android:name=".Home.HomeActivity">
         </activity>
         <activity android:name=".login.RegistActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".UserSet.activity.ReportBirthday" />
         <activity android:name=".UserSet.activity.ReportHeight" />
@@ -122,6 +120,14 @@
         <activity android:name=".Home.AddLunchActivity"
             android:windowSoftInputMode="adjustPan">
         </activity>
+        <activity android:name=".UserSet.activity.ReportWhere">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
