--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,34 +33,27 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".login.LoginActivity">
-
-        </activity>
+        <activity android:name=".login.LoginActivity" />
         <activity android:name=".login.ModifyPSDActivity" />
-        <activity android:name=".Home.HomeActivity">
+        <activity android:name=".Home.HomeActivity" />
+        <activity android:name=".login.RegistActivity" />
+        <activity android:name=".Home.FoodDetailsActivity" />
+        <activity android:name=".UserSet.activity.ReportBirthday" />
+        <activity android:name=".UserSet.activity.ReportHeight" />
+        <activity android:name=".UserSet.activity.ReportAllergy" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".login.RegistActivity">
-
-        </activity>
-        <activity android:name=".Home.FoodDetailsActivity">
-
-        </activity>
-        <activity android:name=".UserSet.activity.ReportBirthday">
-
-        </activity>
-        <activity android:name=".UserSet.activity.ReportHeight" />
-        <activity android:name=".UserSet.activity.ReportAllergy">
-        </activity>
         <activity android:name=".UserSet.activity.ReportNoeat" />
         <activity android:name=".UserSet.activity.ReportOther" />
-        <activity android:name=".UserSet.activity.ReportWork" />
+        <activity android:name=".UserSet.activity.ReportWork" >
+
+        </activity>
         <activity android:name=".UserSet.activity.ReportWeight" />
-        <activity android:name=".UserSet.activity.ReportTaste" />
+        <activity android:name=".UserSet.activity.ReportTaste"></activity>
         <activity android:name=".UserSet.activity.ReportSpecial" />
         <activity android:name=".UserSet.activity.ReportSex" />
         <activity android:name=".UserSet.activity.UserInfoActivity" />
@@ -127,12 +120,14 @@
 
         <activity android:name=".Home.FeedbackActivity" />
         <activity android:name=".Home.ServiceActivity" />
-        <activity android:name=".Home.AddLunchActivity"
-            android:windowSoftInputMode="adjustPan">
-        </activity>
-        <activity android:name=".UserSet.activity.ReportWhere">
-        </activity>
+        <activity
+            android:name=".Home.AddLunchActivity"
+            android:windowSoftInputMode="adjustPan"></activity>
+        <activity android:name=".UserSet.activity.ReportWhere" />
+        <activity android:name=".UserSet.activity.ReportHistory">
 
+        </activity>
+        <activity android:name=".UserSet.activity.ReportAddress"></activity>
     </application>
 
 </manifest>
